# tower-climb

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SETUP_CHECKLIST.md  journal_entry_2025-07-26.md  pyproject.toml
.claude/agents/: coding-agent.md  journal-agent.md
.github/workflows/: ci-enhanced.yml  ci.yml  release.yml
contracts/: README.md  error_tags.yaml
contracts/phase-0/: P0-S1-C1.md  P0-S1-C2.md  P0-S1-C3.md  P0-S2-C1.md  P0-S2-C2.md  P0-S3-C1.md  P0-S3-C2.md  P0-S3-C3.md
docs/: AI_CODING_AGENT_INIT.md  CI_CD_STRATEGY.md  DEVELOPER_GUIDE.md  GAME_DESIGN.md  IMPLEMENTATION_ROADMAP.md  TECHNICAL_ARCHITECTURE.md  VISUAL_DESIGN.md
docs/lab-notes/: 2025-07-26-ci-pipeline-evolution.md
docs/reports/: CONTRACT_COMPLETION_TEMPLATE.md  P0-S1-C1-completion.md  P0-S1-C2-completion.md  P0-S1-C3-completion.md  P0-S1-summary.md
reports/: P0-S1-C1-implementation-report.md  velocity-session-report.md
scripts/: add_regeneration.py  character_design_test.py  complete_contract.py  setup_dev.py  start_contract.py  test_window.py  velocity_example.py  velocity_integration.py  velocity_status.py
src/tower_climb/: __init__.py  __main__.py
src/tower_climb/core/: __init__.py  debug_display.py  fps_counter.py  game_loop.py  game_state.py  state_machine.py  window.py
tests/: __init__.py  test_main.py
tests/core/: __init__.py  test_debug_display.py  test_fps_counter.py  test_game_loop.py  test_state_machine.py  test_window.py
